@@ -17,7 +17,7 @@
             "picture_url": "https://addons.mozilla.org/user-media/userpics/34/9734/13299734/13299734.png?modified=1565722641"
           }
         ],
-        "average_daily_users": 1111769,
+        "average_daily_users": 1111341,
         "categories": {
           "firefox": [
             "web-development",
@@ -218,10 +218,10 @@
           "category": "recommended"
         },
         "ratings": {
-          "average": 4.552,
-          "bayesian_average": 4.550875275168652,
-          "count": 5297,
-          "text_count": 1665
+          "average": 4.5516,
+          "bayesian_average": 4.550475504261017,
+          "count": 5303,
+          "text_count": 1667
         },
         "ratings_url": "https://addons.mozilla.org/en-US/firefox/addon/darkreader/reviews/",
         "requires_payment": false,
@@ -318,7 +318,7 @@
         "type": "extension",
         "url": "https://addons.mozilla.org/en-US/firefox/addon/darkreader/",
         "versions_url": "https://addons.mozilla.org/en-US/firefox/addon/darkreader/versions/",
-        "weekly_downloads": 42800
+        "weekly_downloads": 41426
       },
       "notes": null
     },
@@ -334,7 +334,7 @@
             "picture_url": "https://addons.mozilla.org/user-media/userpics/56/7656/6937656/6937656.png?modified=1550343990"
           }
         ],
-        "average_daily_users": 265194,
+        "average_daily_users": 264619,
         "categories": {
           "firefox": [
             "privacy-security"
@@ -547,9 +547,9 @@
           "category": "recommended"
         },
         "ratings": {
-          "average": 4.8033,
-          "bayesian_average": 4.798698964990932,
-          "count": 1378,
+          "average": 4.8036,
+          "bayesian_average": 4.7989944298239395,
+          "count": 1380,
           "text_count": 245
         },
         "ratings_url": "https://addons.mozilla.org/en-US/firefox/addon/decentraleyes/reviews/",
@@ -635,7 +635,7 @@
         "type": "extension",
         "url": "https://addons.mozilla.org/en-US/firefox/addon/decentraleyes/",
         "versions_url": "https://addons.mozilla.org/en-US/firefox/addon/decentraleyes/versions/",
-        "weekly_downloads": 3697
+        "weekly_downloads": 3583
       },
       "notes": null
     },
@@ -651,7 +651,7 @@
             "picture_url": "https://addons.mozilla.org/user-media/userpics/73/4073/5474073/5474073.png?modified=1469820907"
           }
         ],
-        "average_daily_users": 1201690,
+        "average_daily_users": 1200452,
         "categories": {
           "firefox": [
             "privacy-security"
@@ -1170,10 +1170,10 @@
           "category": "recommended"
         },
         "ratings": {
-          "average": 4.7985,
-          "bayesian_average": 4.795793986966051,
-          "count": 2343,
-          "text_count": 443
+          "average": 4.799,
+          "bayesian_average": 4.79629496440493,
+          "count": 2348,
+          "text_count": 444
         },
         "ratings_url": "https://addons.mozilla.org/en-US/firefox/addon/privacy-badger17/reviews/",
         "requires_payment": false,
@@ -1197,7 +1197,7 @@
         "type": "extension",
         "url": "https://addons.mozilla.org/en-US/firefox/addon/privacy-badger17/",
         "versions_url": "https://addons.mozilla.org/en-US/firefox/addon/privacy-badger17/versions/",
-        "weekly_downloads": 25575
+        "weekly_downloads": 24321
       },
       "notes": null
     },
@@ -1213,7 +1213,7 @@
             "picture_url": null
           }
         ],
-        "average_daily_users": 7393705,
+        "average_daily_users": 7388167,
         "categories": {
           "firefox": [
             "privacy-security"
@@ -1378,7 +1378,7 @@
         },
         "is_disabled": false,
         "is_experimental": false,
-        "last_updated": "2023-12-10T20:30:30Z",
+        "last_updated": "2023-12-14T22:05:25Z",
         "name": {
           "ar": "uBlock Origin",
           "bg": "uBlock Origin",
@@ -1523,10 +1523,10 @@
           "category": "recommended"
         },
         "ratings": {
-          "average": 4.7859,
-          "bayesian_average": 4.785524571334245,
-          "count": 16855,
-          "text_count": 4394
+          "average": 4.7863,
+          "bayesian_average": 4.7859243673114,
+          "count": 16865,
+          "text_count": 4397
         },
         "ratings_url": "https://addons.mozilla.org/en-US/firefox/addon/ublock-origin/reviews/",
         "requires_payment": false,
@@ -1589,7 +1589,7 @@
         "type": "extension",
         "url": "https://addons.mozilla.org/en-US/firefox/addon/ublock-origin/",
         "versions_url": "https://addons.mozilla.org/en-US/firefox/addon/ublock-origin/versions/",
-        "weekly_downloads": 227435
+        "weekly_downloads": 205700
       },
       "notes": null
     },
@@ -1605,7 +1605,7 @@
             "picture_url": null
           }
         ],
-        "average_daily_users": 175266,
+        "average_daily_users": 175062,
         "categories": {
           "firefox": [
             "photos-music-videos",
@@ -1701,10 +1701,10 @@
           "category": "recommended"
         },
         "ratings": {
-          "average": 4.4836,
-          "bayesian_average": 4.4785450179775905,
-          "count": 1156,
-          "text_count": 433
+          "average": 4.4845,
+          "bayesian_average": 4.479449733868465,
+          "count": 1158,
+          "text_count": 434
         },
         "ratings_url": "https://addons.mozilla.org/en-US/firefox/addon/video-background-play-fix/reviews/",
         "requires_payment": false,
@@ -1726,7 +1726,7 @@
         "type": "extension",
         "url": "https://addons.mozilla.org/en-US/firefox/addon/video-background-play-fix/",
         "versions_url": "https://addons.mozilla.org/en-US/firefox/addon/video-background-play-fix/versions/",
-        "weekly_downloads": 371
+        "weekly_downloads": 374
       },
       "notes": null
     },
@@ -1742,7 +1742,7 @@
             "picture_url": null
           }
         ],
-        "average_daily_users": 86834,
+        "average_daily_users": 86192,
         "categories": {
           "firefox": [
             "privacy-security",
@@ -1877,7 +1877,7 @@
         "type": "extension",
         "url": "https://addons.mozilla.org/en-US/firefox/addon/privacy-possum/",
         "versions_url": "https://addons.mozilla.org/en-US/firefox/addon/privacy-possum/versions/",
-        "weekly_downloads": 1422
+        "weekly_downloads": 1054
       },
       "notes": null
     },
@@ -1893,7 +1893,7 @@
             "picture_url": "https://addons.mozilla.org/user-media/userpics/64/9064/12929064/12929064.png?modified=1651263207"
           }
         ],
-        "average_daily_users": 288739,
+        "average_daily_users": 288741,
         "categories": {
           "firefox": [
             "search-tools",
@@ -2110,10 +2110,10 @@
           "category": "recommended"
         },
         "ratings": {
-          "average": 4.6497,
-          "bayesian_average": 4.645209362164032,
-          "count": 1359,
-          "text_count": 264
+          "average": 4.65,
+          "bayesian_average": 4.645504940520216,
+          "count": 1360,
+          "text_count": 265
         },
         "ratings_url": "https://addons.mozilla.org/en-US/firefox/addon/search_by_image/reviews/",
         "requires_payment": false,
@@ -2134,7 +2134,7 @@
         "type": "extension",
         "url": "https://addons.mozilla.org/en-US/firefox/addon/search_by_image/",
         "versions_url": "https://addons.mozilla.org/en-US/firefox/addon/search_by_image/versions/",
-        "weekly_downloads": 6249
+        "weekly_downloads": 6343
       },
       "notes": null
     },
@@ -2157,7 +2157,7 @@
             "picture_url": null
           }
         ],
-        "average_daily_users": 118894,
+        "average_daily_users": 118713,
         "categories": {
           "firefox": [
             "search-tools",
@@ -2438,10 +2438,10 @@
           "category": "recommended"
         },
         "ratings": {
-          "average": 4.3694,
-          "bayesian_average": 4.364995316323036,
-          "count": 1286,
-          "text_count": 363
+          "average": 4.3699,
+          "bayesian_average": 4.36549570183314,
+          "count": 1287,
+          "text_count": 364
         },
         "ratings_url": "https://addons.mozilla.org/en-US/firefox/addon/google-search-fixer/reviews/",
         "requires_payment": false,
@@ -2461,7 +2461,7 @@
         "type": "extension",
         "url": "https://addons.mozilla.org/en-US/firefox/addon/google-search-fixer/",
         "versions_url": "https://addons.mozilla.org/en-US/firefox/addon/google-search-fixer/versions/",
-        "weekly_downloads": 49
+        "weekly_downloads": 81
       },
       "notes": null
     },
@@ -2477,7 +2477,7 @@
             "picture_url": "https://addons.mozilla.org/user-media/userpics/43/0143/143/143.png?modified=1506804587"
           }
         ],
-        "average_daily_users": 314227,
+        "average_daily_users": 313680,
         "categories": {
           "firefox": [
             "web-development",
@@ -2488,18 +2488,18 @@
         "contributions_url": "https://www.paypal.com/donate/?hosted_button_id=9ERKTU5MBH4EW&utm_content=product-page-contribute&utm_medium=referral&utm_source=addons.mozilla.org",
         "created": "2005-05-13T10:51:32Z",
         "current_version": {
-          "id": 5634098,
+          "id": 5661865,
           "compatibility": {
             "firefox": {
               "min": "59.0",
               "max": "*"
             },
             "android": {
-              "min": "59.0",
+              "min": "113.0",
               "max": "*"
             }
           },
-          "edit_url": "https://addons.mozilla.org/en-US/developers/addon/noscript/versions/5634098",
+          "edit_url": "https://addons.mozilla.org/en-US/developers/addon/noscript/versions/5661865",
           "is_strict_compatibility_enabled": false,
           "license": {
             "id": 13,
@@ -2510,22 +2510,22 @@
             "url": "http://www.gnu.org/licenses/gpl-2.0.html"
           },
           "release_notes": {
-            "en-US": "v 11.4.28\n============================================================\nx Prevent URL leaks from media placeholders (thanks NDevTK\n  for report)\nx [nscl] Support for in-tree TLDs updates"
+            "en-US": "v 11.4.29\n============================================================\nx [nscl] Updated TLDs\nx [nscl] Improved reliability of TLD updater\nx Removed theme.js console noise\nx Fix beta channel updates breakage due to\n  browser_specific_settings override\nx [nscl] Several content-side performance improvements\nx Reduce synchronous policy retrieval impact on file: and\n  ftp: document loading performance\nx More commands for which a keyboard shortcut can be\n  configured\nx [L10n] Updated de, fi, mk, nl, pl, ru, sq, tr, uk,\n  pt_BR, zh_CN, zh_TW\nx Explicit Android compatibility declaration"
           },
-          "reviewed": "2023-10-10T11:09:38Z",
-          "version": "11.4.28",
+          "reviewed": "2023-12-12T09:47:41Z",
+          "version": "11.4.29",
           "files": [
             {
-              "id": 4178438,
-              "created": "2023-10-08T20:33:10Z",
-              "hash": "sha256:54d076b3226d454216117547f6441d2f95af3057d20f726e55d94b0f22573c14",
+              "id": 4206186,
+              "created": "2023-12-07T23:12:27Z",
+              "hash": "sha256:05b98840b05ef2acbac333543e4b7c3d40fee2ce5fb4e29260b05e2ff6fe24cd",
               "is_restart_required": false,
               "is_webextension": true,
               "is_mozilla_signed_extension": false,
               "platform": "all",
-              "size": 950895,
+              "size": 952701,
               "status": "public",
-              "url": "https://addons.mozilla.org/firefox/downloads/file/4178438/noscript-11.4.28.xpi",
+              "url": "https://addons.mozilla.org/firefox/downloads/file/4206186/noscript-11.4.29.xpi",
               "permissions": [
                 "contextMenus",
                 "storage",
@@ -2592,7 +2592,7 @@
         },
         "is_disabled": false,
         "is_experimental": false,
-        "last_updated": "2023-12-07T23:00:20Z",
+        "last_updated": "2023-12-12T09:47:41Z",
         "name": {
           "de": "NoScript",
           "el": "NoScript",
@@ -2664,9 +2664,9 @@
           "category": "recommended"
         },
         "ratings": {
-          "average": 4.399,
-          "bayesian_average": 4.396341521516985,
-          "count": 2148,
+          "average": 4.3984,
+          "bayesian_average": 4.395742595786679,
+          "count": 2151,
           "text_count": 830
         },
         "ratings_url": "https://addons.mozilla.org/en-US/firefox/addon/noscript/reviews/",
@@ -2711,7 +2711,7 @@
         "type": "extension",
         "url": "https://addons.mozilla.org/en-US/firefox/addon/noscript/",
         "versions_url": "https://addons.mozilla.org/en-US/firefox/addon/noscript/versions/",
-        "weekly_downloads": 8349
+        "weekly_downloads": 8167
       },
       "notes": null
     },
@@ -2727,7 +2727,7 @@
             "picture_url": null
           }
         ],
-        "average_daily_users": 158952,
+        "average_daily_users": 158779,
         "categories": {
           "firefox": [
             "photos-music-videos",
@@ -2836,10 +2836,10 @@
           "category": "recommended"
         },
         "ratings": {
-          "average": 3.8698,
-          "bayesian_average": 3.865729231191426,
-          "count": 1198,
-          "text_count": 433
+          "average": 3.8682,
+          "bayesian_average": 3.864132502143421,
+          "count": 1199,
+          "text_count": 434
         },
         "ratings_url": "https://addons.mozilla.org/en-US/firefox/addon/youtube-high-definition/reviews/",
         "requires_payment": false,
@@ -2858,7 +2858,7 @@
         "type": "extension",
         "url": "https://addons.mozilla.org/en-US/firefox/addon/youtube-high-definition/",
         "versions_url": "https://addons.mozilla.org/en-US/firefox/addon/youtube-high-definition/versions/",
-        "weekly_downloads": 2642
+        "weekly_downloads": 2542
       },
       "notes": null
     }
