@@ -16,7 +16,7 @@ container:
 var:
   fenix_version: 115.2.1
   browser_branch: 13.0-1
-  browser_build: 10
+  browser_build: 11
   variant: Beta
   # This should be updated when the list of gradle dependencies is changed.
   gradle_dependencies_version: 1
